--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "moment": "^2.30.1",
         "pagefind": "^1.3.0",
         "vitepress": "^1.6.4",
-        "vitepress-plugin-pagefind": "^0.4.14"
+        "vitepress-plugin-pagefind": "^0.4.14",
+        "vue3-marquee": "^4.2.2"
     },
     "devDependencies": {
         "@types/node": "^24.3.0"
