--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "pagefind": "^1.3.0",
         "vitepress": "^1.6.4",
         "vitepress-plugin-pagefind": "^0.4.14",
+        "vue-zoomable": "^1.2.8",
         "vue3-marquee": "^4.2.2"
     },
     "devDependencies": {
