ナンバリング文字の上書き機能

--- a/pages/company/line.sample
+++ b/pages/company/line.sample
@@ -2,6 +2,7 @@
 layout: doc <- そのまま
 title: "" <- 路線の正式名称を入力
 letter: A <- 路線のナンバリング文字を入力
+letter_override: "A" <- <オプション>違う路線で同じナンバリング文字を使いたい時に入力
 color: "#123456" <- ラインカラーを入力
 description: "" <- 路線の説明を入力
 ---
