--- a/pages/station/station.sample
+++ b/pages/station/station.sample
@@ -5,6 +5,7 @@ line:
   houB:  <- 路線のIDを入力
     prev: null  <- その路線での前の駅のIDを入力、存在しない場合はnullを入力
     next: "satutaba"  <- その路線での次の駅のIDを入力、存在しない場合はnullを入力
+    nextとprevはリスト指定もできます。["daitei", "banzyo"]1つの路線で複数の次、前駅がある場合に使用してください。
     number: "01"  <- その路線でのナンバリングの数字を入力
 x: 0  <- そのまま
 y: 0  <- そのまま
